# x-sourcing-engine-showcase

./: .env.example  .gitignore  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/cost-controls/: page.tsx
app/methodology/: page.tsx
app/results/: page.tsx
app/results/[candidate]/: page.tsx
components/: EvidenceTag.tsx  Footer.tsx  MetricCard.tsx  Nav.tsx  ReplayNotice.tsx  ResultsTable.tsx
config/: broad_queries.example.yaml  pilot_queries.example.yaml
demo/sanitized-sample-outputs/: README.md  cost-ledger.json  evidence-framework.json  limitations.json  methodology.json  metrics-provenance.json  queries-broad.json  queries-pilot.json  query-performance.json  run-summary.json  test-summary.json
docs/: architecture.md  cost-controls.md  evidence-framework.md  limitations.md  methodology.md  metrics-reconciliation.md
lib/: data.ts  site.ts
public/demo-data/: candidates.json  cost-ledger.json  evidence-framework.json  methodology.json  metrics-provenance.json  queries-broad.json  queries-pilot.json  query-performance.json  run-summary.json  test-summary.json
scripts/: build_sanitized_demo_data.py
src/engine/: README.md  __init__.py
src/engine/classification/: builder_attribution.py  evidence.py  (+2 more)
tests/: test_classification.py  test_consolidation.py  test_cost_controls.py  test_demo_data.py  test_metrics_reconciliation.py  test_search_and_enrichment.py  test_ui_replay_notice.py
(+9 files in other folders)
